<resources>
    <string name="app_name">USTH Weather</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="cloudy">Cloudy</string>
    <string name="_12c">12C</string>
    <string name="_24c_30c">24C-30C</string>
    <string name="rain">Rain</string>
    <string name="_22c_23c">22C-23C</string>
    <string name="scattered_showers">Scattered Showers</string>
    <string name="_22c_27c">22C-27C</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="_22c_30c">22C-30C</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="_24c_31c">24C-31C</string>
    <string name="thunderstorms">Thunderstorms</string>
    <string name="_25c_28c">25C-28C</string>
    <string name="scattered_thunderstorms">Scattered Thunderstorms</string>
    <string name="_24c_27c">24C-27C</string>
    <string name="showers">Showers</string>
    <string name="_24c_26c">24C-26C</string>
    <string name="city">Hanoi</string>
    <string name="title_activity_pref">PrefActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
